# HeiMa_C_Enhance

./: .gitignore  学习进度.txt
Day1/: CMakeLists.txt  main.c
Day1/HeaderFile/: socketclient.h
Day1/ResourceFile/: socketclient.c
Day2/: CMakeLists.txt  main.c  work.c  work3.c  work4.c
Day3/: CMakeLists.txt  main.c
Day4/: CMakeLists.txt  main.c
Day5/: CMakeLists.txt  main.c
Day6/: CMakeLists.txt  main.c  test.txt  work01.txt  work02.txt
Day7/: CMakeLists.txt  main.c
Day8/: CMakeLists.txt  main.c
socketclient/: CMakeLists.txt  main.c
socketclient/socketclient/: socketclient.c  socketclient.h
